2018-03-03  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/71464
	* g++.dg/torture/pr71464.C: New.

2018-03-03  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/80965
	* gfortran.dg/select_type_41.f90: New test.

2018-03-02  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/61135
	* g++.dg/cpp0x/lambda/lambda-61135.C: New.

2018-03-02  Marek Polacek  <polacek@redhat.com>

	PR c++/84578
	* g++.dg/ext/flexary29.C: New test.

2018-03-02  Jakub Jelinek  <jakub@redhat.com>

	* c-c++-common/Warray-bounds-2.c: Fix a comment typo.

2018-03-02  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/81812
	* g++.dg/torture/pr81812.C: New.

2018-03-02  Marek Polacek  <polacek@redhat.com>

	PR c++/84171
	* g++.dg/warn/Wsign-compare-8.C: New test.

	PR c++/84663
	* g++.dg/parse/array-size3.C: New test.

	PR c++/84664
	* g++.dg/cpp0x/lambda/lambda-ice28.C: New test.

2018-03-02  Jakub Jelinek  <jakub@redhat.com>

	PR c++/84662
	* g++.dg/cpp1y/pr84662.C: New test.

2018-03-02  Thomas Schwinge  <thomas@codesourcery.com>

	* g++.dg/lto/20080915_0.C: Don't use "dg-lto-options".
	* g++.dg/lto/20080907_0.C: Use "#pragma GCC" instead of
	"dg-lto-options".
	* g++.dg/lto/20101010-1_0.C: Likewise.
	* g++.dg/lto/20101010-2_0.C: Likewise.

2018-03-02  Jakub Jelinek  <jakub@redhat.com>

	PR ipa/84628
	* gcc.dg/pr84628.c: New test.

	PR target/56540
	* gcc.target/ia64/pr56540.c: New test.

2018-03-02  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* gcc.target/powerpc/altivec-7-be.c: Remove VSX content, allow
	32-bit target.
	* gcc.target/powerpc/altivec-7.h: Remove VSX content.
	* gcc.target/powerpc/vsx-7-be.c: New test (VSX content).
	* gcc.target/powerpc/vsx-7.h: New include (VSX content).
	* gcc.target/powerpc/altivec-7-le.c: Add vsx-7.h include.

2018-03-02  Marek Polacek  <polacek@redhat.com>

	PR c++/84590
	* c-c++-common/ubsan/shift-11.c: New test.

2018-03-02  Richard Sandiford  <richard.sandiford@linaro.org>

	* gcc.dg/vect/vect-alias-check-13.c: New test.
